WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255915
REGRESSION(
263331@main
): [GTK] MiniBrowser cannot be built with clang due to fallthrough attribute
https://bugs.webkit.org/show_bug.cgi?id=255915
Summary
REGRESSION(263331@main): [GTK] MiniBrowser cannot be built with clang due to ...
Adrian Perez
Reported
2023-04-25 01:45:22 PDT
The error: ../Tools/MiniBrowser/gtk/main.c:288:13: error: expected expression [[fallthrough]]; ^ ../Tools/MiniBrowser/gtk/main.c:291:13: error: expected expression [[fallthrough]]; ^ We should probably use __attribute__((fallthrough)) instead because the MiniBrowser is C code, not C++. Likely GCC just goes ahead and recognizes [[fallthrough]] also while parsing C these days.
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2023-04-25 01:50:58 PDT
Actually, we have a FALLTHROUGH macro already in wtf/Compiler.h, but of course the MiniBrowser should only use public API :-)
Adrian Perez
Comment 2
2023-04-25 02:09:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13139
EWS
Comment 3
2023-04-25 03:13:44 PDT
Committed
263358@main
(db5885088422): <
https://commits.webkit.org/263358@main
> Reviewed commits have been landed. Closing PR #13139 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2023-04-25 03:14:18 PDT
<
rdar://problem/108496085
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug