REGRESSION(263331@main): [GTK] MiniBrowser cannot be built with clang due to fallthrough attribute https://bugs.webkit.org/show_bug.cgi?id=255915

Reviewed by Carlos Garcia Campos.

* Tools/MiniBrowser/gtk/main.c:
(parseFeaturesOptionCallback): Define and use a FALLTHROUGH macro
depending on __GNUC__ and __has_attribute to maximize compiler
compatibility.

Canonical link: https://commits.webkit.org/263358@main