Tools/MiniBrowser/gtk/main.c
@@ -43,6 +43,16 @@
 #include <gst/gst.h>
 #endif
 
+#if !defined(FALLTHROUGH) && defined(__GNUC__) && defined(__has_attribute)
+#if __has_attribute(fallthrough)
+#define FALLTHROUGH __attribute__ ((fallthrough))
+#endif
+#endif
+
+#if !defined(FALLTHROUGH)
+#define FALLTHROUGH
+#endif
+
 #define MINI_BROWSER_ERROR (miniBrowserErrorQuark())
 
 static const gchar **uriArguments = NULL;
@@ -285,10 +295,10 @@ static gboolean parseFeaturesOptionCallback(const gchar *option, const gchar *va
         case '!':
         case '-':
             enabled = FALSE;
-            [[fallthrough]];
+            FALLTHROUGH;
         case '+':
             item++;
-            [[fallthrough]];
+            FALLTHROUGH;
         default:
             break;
         }
